--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "@stencil/core": "^1.1.3",
     "express": "^4.17.1",
+    "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.9.0"
   },
   "devDependencies": {
+    "@stencil/router": "^1.0.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^6.0.0",
